# norm_address

./: .env.example  .gitignore  Dockerfile  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
norm_address/: app.py  settings.py
norm_address/api/: address.py  base.py
norm_address/application/: __init__.py  usecases.py
norm_address/domain/: address.py  protocols.py
norm_address/infra/: __init__.py  gateway.py  redis.py
tests/: conftest.py
tests/api/: test_address.py
tests/application/: test_usecase.py
tests/infra/: test_gateway.py  test_redis.py
