[project]
name = "norm-address"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil325",email = "potekhindaniil04@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "dishka (>=1.6.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "redis[hiredis] (>=6.2.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

